Added addition text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="#">Welcome to our site! Enjoy Your Stay!</a></div>
+				<div class="logo"><a href="#">Welcome to our site! Enjoy Your Stay! or not!</a></div>
 			</header>
 
 		<!-- Main -->
