Re-Re updated Text

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<div class="logo"><a href="#">Welcome to the Jungle!!</a></div>
+				<div class="logo"><a href="#">Welcome to the Jungle!! Wagarble </a></div>
 			</header>
 
 		<!-- Main -->
